--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,12 @@
+html {
+    font-size: 100%;
+    overflow-x: hidden;
+}
+
 .app-container {
-    width: 100%;
-    max-width: none;
-    padding: 0rem 2rem;
+    padding: 2rem;
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 300px 1fr;
     justify-content: space-between;
     gap: 0;
 }
@@ -12,8 +15,19 @@
     display: flex;
     flex-direction: column;
     padding: 2rem;
+    flex-basis: 300px;
 }
 
 #tabs {
     padding: 2rem;
+}
+
+@media (max-width: 576px) {
+    .app-container {
+        grid-template-columns: 1fr;
+    }
+
+    /* #tabs {
+        height: 100vh;
+    } */
 }
